--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,19 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+//Binary to decimal
+#include <stdio.h>
+#include <stdlib.h>
+int main()
+{
+    int n,sum,base,digit;
+    printf("Enter the binary number\n");
+    scanf("%d",&n);
+    sum=0;
+    base=1;
+    while(n!=0)
+    {
+        digit=n%10;
+        n=n/10;
+        sum=sum+digit*base;
+        base=base*2;
+    }
+    printf("Decimal:%d",sum);
+}
